--- a/Home page/home.html
+++ b/Home page/home.html
@@ -102,10 +102,10 @@
        <div class="img">
          <img src="person_1.png" alt="">
        </div>
-       <div class="name">Mike Kane</div>
+       <div class="name">Nitesh</div>
        <div class="content">
          <h1><i class="fas fa-quote-left"></i></h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus placeat sint distinctio corporis debitis neque aliquid quae maiores molestiae qui. Repudiandae itaque beatae illum labore.</p>
+         <p>This website has helped me .........................................................................................................................................</p>
          <div class="stars">
    		   <img src="star_gold.png" alt="">
            <img src="star_gold.png" alt="">
@@ -120,10 +120,10 @@
          <img src="person_2.png" alt="">
 
        </div>
-       <div class="name">carlo rossi</div>
+       <div class="name">Himanshi</div>
        <div class="content">
          <h1><i class="fas fa-quote-left"></i></h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus placeat sint distinctio corporis debitis neque aliquid quae maiores molestiae qui. Repudiandae itaque beatae illum labore.</p>
+         <p>Really thankful to this website for................................................................................................................................</p>
          <div class="stars">
            <img src="star_gold.png" alt="">
            <img src="star_gold.png" alt="">
@@ -137,10 +137,10 @@
        <div class="img">
          <img src="person_3.png" alt="">
        </div>
-       <div class="name">Jason Peter</div>
+       <div class="name">Priya</div>
        <div class="content">
          <h1><i class="fas fa-quote-left"></i></h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus placeat sint distinctio corporis debitis neque aliquid quae maiores molestiae qui. Repudiandae itaque beatae illum labore.</p>
+         <p>One of the best websites in this domain.................................................................................................................................</p>
          <div class="stars">
            <img src="star_gold.png" alt="">
            <img src="star_gold.png" alt="">
