--- a/Home page/home.html
+++ b/Home page/home.html
@@ -158,6 +158,45 @@
        
         </div>
     </div> 
+     <footer class="footer">
+  	 <div class="container">
+  	 	<div class="row">
+  	 		<div class="footer-col">
+  	 			<h4>Jobs Categories</h4>
+  	 			<ul>
+  	 				<li><a href="#">Construction</a></li>
+  	 				<li><a href="#">Driver</a></li>
+  	 				<li><a href="#">House Keeping</a></li>
+  	 				<li><a href="#">Others</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Contact Us</h4>
+  	 			<ul>
+  	 				<li><a href="#">FAQ</a></li>
+  	 				<li><a href="#">Email</a></li>
+  	 				<li><a href="#">Address</a></li>
+
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>For Recruiters</h4>
+  	 			<ul>
+  	 				<li><a href="#">Post a Job</a></li>
+  	 				<li><a href="#">Search Candidates</a></li>
+  	 				<li><a href="#">Resume Database</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>follow us</h4>
+  	 			<div class="social-links">
+  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
+  	 				<a href="#"><i class="fab fa-twitter"></i></a>
+  	 				<a href="#"><i class="fab fa-instagram"></i></a>
+  	 				<a href="#"><i class="fab fa-linkedin-in"></i></a>
+  	 			</div>
+  	 		</div>
+  	 	</div>
   
 
 
