--- a/Home page/home.html
+++ b/Home page/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="upper.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Averia+Libre:wght@300&family=Bree+Serif&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
