--- a/Home page/form2.html
+++ b/Home page/form2.html
@@ -11,7 +11,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <title>Sign up Workers</title>
-    <link rel="stylesheet" href="project2.css">
+    <link rel="stylesheet" href="form2.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -103,7 +103,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script src="project2.js"></script>
+    <script src="form2.js"></script>
 
 
 
@@ -112,5 +112,3 @@
 </body>
 
 </html>
-proj2
-Displaying proj2.
