--- a/Home page/home.html
+++ b/Home page/home.html
@@ -26,8 +26,8 @@
          <ul>
     
                 <li class="navbar"><a href="#">Home</a></li>
-                <li class="navbar"><a href="#">About us</a></li>
-                <li class="navbar"><a href="#">Contacts</a></li>
+                <li class="navbar"><a href="aboutus.html">About us</a></li>
+                <li class="navbar"><a href="contactus.html">Contacts</a></li>
                 <li class="navbar"><a href="signin.html">Sign in</a></li>
               </ul>
              </nav>
@@ -36,7 +36,7 @@
       <h1 class="h-primary">Welcome you all here will find jobs and can hire </h1>
        <p> This website can be used to help people who are skilled in a particular proffesion so that they can find a better livelihood.
        </p>
-       <p> laboriosam repellat distinctio facere nulla.
+       <p> Let's make Aatmanirbhar Bharat.
        </p>
        <button class="btn">Find jobs</button>
 
