--- a/Home page/aboutus.html
+++ b/Home page/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aboutus.css">
+    <link rel="stylesheet" href="about.css">
     <title>About Us</title>
 
 </head>
@@ -20,13 +20,26 @@
       <section class="background premsec">
           <br>
           <br>
-          <p class="info">We are a group of students here to make a platform for the skilled indians and further empowering the slogan 'AATMANIRBHAR BHARAT'
+          <h1 style=" text-align: center;color: crimson;  font-size: 70px;">About Us</h1>
+          <br>
+          <br>
+          <p class="info">We helps candidates find rewarding work and recruiters find the right talent to grow their businesses, and our goal is to adhere to the highest ethical standards when doing so. Respect the diversity of our recruiters, candidates and business partners.
+              <br>
+              We aim to empower people with knowledge and insights through perfect job information. With the highest-quality index of global job listings, we enable people to find great jobs, superior candidates, and brilliant labor market insights. And by being deeply rooted at the intersection of these three, we are transforming the job market.
           </p>
           <p class="info">Here the workers can connect directly to the employers</p>
       </section>
+      <br>
+      <br>
+      <br>
+      <h1 style="font-size: 70px;color: crimson;text-align: center;">Our Team</h1>
+      <br>
+      <br>
+      <p style="font-size: 25px;padding: 40px;">We are a team of four college student from Motilal Nehru National Institute of Technology,Prayagraj</p>
     <section class="background firstSection">
         <div class="box-main">
             <div class="firsthalf">
+               
                 <p class="name">Nitesh</p>
                 <p class="details">
                     <p class="email">Nitesh.20208087@mnnit.ac.in</p>
@@ -34,6 +47,7 @@
                     <p class="branch">Information Technology</p>
                 </p>
             </div>
+
             <div class="secondhalf">
                 <img src="" alt="Nitesh image">
             </div>  
