--- a/Home page/home.html
+++ b/Home page/home.html
@@ -27,7 +27,7 @@
     
                 <li class="navbar"><a href="#">Home</a></li>
                 <li class="navbar"><a href="about.html">About us</a></li>
-                <li class="navbar"><a href="#Contact-form">Contact us</a></li>
+                <li class="navbar"><a href="contact.html">Contact us</a></li>
                 <li class="navbar"><a href="signin.html">Sign in</a></li>
               </ul>
              </nav>
